<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.unilovi.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_solicitudes"
        android:name="com.example.unilovi.fragments.SolicitudesFragment"
        android:label="@string/menu_solicitudes"
        tools:layout="@layout/fragment_solicitudes" />

    <fragment
        android:id="@+id/nav_preferencias"
        android:name="com.example.unilovi.fragments.PreferenciasBusquedaFragment"
        android:label="@string/menu_preferencias"
        tools:layout="@layout/fragment_preferencias" />
</navigation>